# ChangeLog for dev-python/interlude
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Mar 2012; James Rowe <jnrowe@gmail.com> interlude-1.1.1.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> interlude-1.1.1.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  13 Feb 2011; James Rowe <jnrowe@gmail.com> interlude-1.1.1.ebuild:
  Keyworded amd64.

*interlude-1.1.1 (14 Jan 2011)

  14 Jan 2011; James Rowe <jnrowe@gmail.com> +interlude-1.1.1.ebuild:
  Version bump [246].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> interlude-1.0.ebuild:
  Added PYTHON_DEPEND setting.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> interlude-1.0.ebuild:
  Switched to EAPI 2.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> interlude-1.0.ebuild:
  Set SUPPORT_PYTHON_ABIS [205].

  12 Nov 2009; James Rowe <jnrowe@gmail.com> interlude-1.0.ebuild:
  Keyworded x86.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> interlude-1.0.ebuild:
  Keyworded amd64.

  14 Oct 2009; James Rowe <jnrowe@gmail.com> interlude-1.0.ebuild:
  Switch to using jnrowe-pypi eclass.

  13 Oct 2009; James Rowe <jnrowe@gmail.com> interlude-1.0.ebuild:
  keyworded ~x86 [e1f].

*interlude-1.0 (13 Oct 2009)

  13 Oct 2009; James Rowe <jnrowe@gmail.com> +interlude-1.0.ebuild,
  +metadata.xml:
  Initial ebuild. by me [74c].
