@@ -3,8 +3,7 @@
 # $Header: $
 
 EAPI=4
-PYTHON_DEPEND="*"
-SUPPORT_PYTHON_ABIS="1"
+PYTHON_COMPAT="python2_5 python2_6 python2_7 python3_1 python3_2"
 
 inherit jnrowe-pypi
 
@@ -18,3 +17,11 @@ IUSE=""
 
 DEPEND="dev-python/setuptools"
 RDEPEND=""
+
+DOCS=(CHANGELOG.rst README.rst)
+
+src_install() {
+	default
+
+	python-distutils-ng_src_install
+}
